--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -293,7 +293,7 @@ $colorMain: #CC0033;
         -webkit-backdrop-filter: blur(15px);
         color: #fff!important;
         border-radius: 30px;
-        padding: 1.7vw;
+        padding: 20px;
         border: none!important;
         z-index: 4000;
     }
