--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -34,6 +34,13 @@ $colorMain: #CC0033;
     align-items: flex-end!important;
 }
 
+.modalActiiContentNew::-webkit-scrollbar {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+
 .imgSVG{
     height: 30px;
     width: 20px;
