--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -34,20 +34,11 @@ $colorMain: #CC0033;
     align-items: flex-end!important;
 }
 
-.modalActiiContentNew::-webkit-scrollbar {
-    display: block;
+.modalActiiContentNew::-webkit-scrollbar-track {
+    //display: block;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-right: 20px;
-}
-.modalActiiContentNew::-webkit-scrollbar-track-piece:end {
-    background: transparent;
-    margin-bottom: 20px; 
-}
-
-.modalActiiContentNew::-webkit-scrollbar-track-piece:start {
-    background: transparent;
-    margin-top: 20px;
+    //margin-right: 20px;
 }
 
 
