--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -40,7 +40,9 @@ $colorMain: #CC0033;
     margin-bottom: 20px;
     //margin-right: 20px;
 }
-
+.ModalItemButtonCart:hover{
+    background-color: rgba(249, 188, 35, 0.1);
+}
 
 .imgSVG{
     height: 30px;
