--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -281,6 +281,10 @@ $colorMain: #CC0033;
     }
 }
 
+.ModalItemButtonCart:hover{
+    background-color: rgba(249, 188, 35, 0.1);
+}
+
 .MuiTooltip-popper{
     //left: -100px!important;
     pointer-events: auto!important;
