--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -43,6 +43,9 @@ $colorMain: #CC0033;
 .ModalItemButtonCart:hover{
     background-color: rgba(249, 188, 35, 0.1);
 }
+.ModalItemButtonCart{
+    background-color: #fff;
+}
 
 .imgSVG{
     height: 30px;
