--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -284,6 +284,9 @@ $colorMain: #CC0033;
 .ModalItemButtonCart:hover{
     background-color: rgba(249, 188, 35, 0.1);
 }
+.ModalItemButtonCart{
+    background-color: #fff;
+}
 
 .MuiTooltip-popper{
     //left: -100px!important;
