--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -88,7 +88,7 @@ $colorMain: #CC0033;
     }
 }
 .blurBacground div{
-    background-color: transparent!important;
+    background-color: transparent;
     box-shadow: none!important;
 }
 .ItemDialog div{
