--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -280,9 +280,12 @@ $colorMain: #CC0033;
         text-transform: initial!important;
     }
 }
+.ModalItemButtonCart.OPEN{
+    background-color: rgba(249, 188, 35, 0.1)!important;
+}
 
 .ModalItemButtonCart:hover, .ModalItemButtonCartOther:hover{
-    background-color: rgba(249, 188, 35, 0.1)!important;;
+    background-color: rgba(249, 188, 35, 0.1)!important;
 }
 .ModalItemButtonCart:not(:hover), .ModalItemButtonCartOther:not(:hover){
     background-color: #fff!important;
