--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -27,6 +27,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+$Roboto: 'Roboto';
 $Ubuntu: 'Ubuntu';
 $Futuris: 'FuturaFuturisC Bold';
 $colorMain: #CC0033;
@@ -299,28 +301,28 @@ body{
             height: 500px;
             display: table-caption;
             width: 100%;
-            border-bottom: 1px solid #e5e5e5;
+            //border-bottom: 1px solid #e5e5e5;
         }
         & .TableMiniName{
             width: 40%;
-            @include fons(1rem, $Ubuntu);
+            @include fons(1.25rem, $Roboto);
         }
         & .TableMiniPrice{
             text-align: center;
-            @include fons(1rem, $Ubuntu);
+            @include fons(1.25rem, $Roboto);
+            font-weight: 400;
             display: flex;
             justify-content: flex-end;
-            & svg{
-                font-size: 0.7rem;
-                padding-top: 6px;
-            }
         }
         & .TableMiniFullName{
-            @include fons(1rem, $Ubuntu);
             width: 70%;
-        }
+            & > span{
+                @include fons(1.25rem, $Roboto);
+                font-weight: 400;
+            }
+        } 
         & .TableMiniFullPrice{
-            @include fons(1rem, $Ubuntu);
+            @include fons(1.25rem, $Roboto);
             width: 40%;
             text-align: center;
         }
