--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -286,38 +286,38 @@ body{
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-    & > button:first-child{
-        width: 23px;
-        height: 23px;
-        padding: 0; 
-        margin-left: 8px;
-        @include fons(1.5rem, $Roboto);
-        font-weight: 300;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #F9BC23;
-        border: 1px solid #F9BC23;
-        border-radius: 60px;
-    }
-    & > div > span{
-        @include fons(0.875rem, $Roboto);
-        font-weight: 500;
-    }
-    & > button:last-child{
-        width: 28px;
-        height: 28px;
-        padding: 0; 
-        margin-right: 6px;
-        @include fons(1.5rem, $Roboto);
-        font-weight: 300;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #F9BC23;
-        border: 1px solid #F9BC23;
-        border-radius: 60px;
+        & > .minus{
+            width: 23px;
+            height: 23px;
+            padding: 0; 
+            margin-left: 8px;
+            @include fons(1.5rem, $Roboto);
+            font-weight: 300;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #F9BC23;
+            border: 1px solid #F9BC23;
+            border-radius: 60px;
+        }
+        & > div > span{
+            @include fons(0.875rem, $Roboto);
+            font-weight: 500;
+        }
+        & > .plus{
+            width: 28px;
+            height: 28px;
+            padding: 0; 
+            margin-right: 6px;
+            @include fons(1.5rem, $Roboto);
+            font-weight: 300;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #F9BC23;
+            border: 1px solid #F9BC23;
+            border-radius: 60px;
+        }
     }
 }
 #simple-popover{
