--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -285,8 +285,9 @@ body{
 .MiniActionsCartButton{
     width: 100%;
     & > div{
-        width: 118px;
-        height: 38px; 
+        width: 100%;
+        min-height: 38px; 
+        height: 100%;
         border-radius: 40px; 
         border: 1px solid #F9BC23;
         display: flex;
@@ -328,6 +329,14 @@ body{
             cursor: pointer;
         }
         & > button:hover{
+            background-color: #cf9f37;
+            border: 1px solid #cf9f37;
+        }
+        & > button:target{
+            background-color: #cf9f37;
+            border: 1px solid #cf9f37;
+        }
+        & > button:active{
             background-color: #cf9f37;
             border: 1px solid #cf9f37;
         }
