--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -286,18 +286,17 @@ body{
     width: 100%;
     & > div{
         width: 100%;
-        min-height: 38px; 
-        height: 100%;
-        border-radius: 40px; 
+        height: 48px;
+        border-radius: 60px; 
         border: 1px solid #F9BC23;
         display: flex;
         justify-content: space-between;
         align-items: center;
         & > .minus{
-            width: 23px;
-            height: 23px;
+            width: 30px;
+            height: 30px;
             padding: 0; 
-            margin-left: 8px;
+            margin-left: 10px;
             padding-top: 0.9px;
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 400;
@@ -310,12 +309,12 @@ body{
             cursor: pointer;
         }
         & > span{
-            @include fonsNew(0.875rem, $Roboto);
+            @include fonsNew(1.25rem, $Roboto);
             font-weight: 500;
         }
         & > .plus{
-            width: 28px;
-            height: 28px;
+            width: 38px;
+            height: 38px;
             padding: 0; 
             margin-right: 6px;
             @include fonsNew(1.5rem, $Roboto);
@@ -371,6 +370,14 @@ body{
             display: table-caption;
             width: 100%;
             //border-bottom: 1px solid #e5e5e5;
+        }
+        & tfoot td:first-child{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+        }
+        & tfoot td:last-child{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
         }
         & .TableMiniName{
             width: 40%;
