--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -431,8 +431,10 @@ body{
         padding: 2px 4px;
         display: flex;
         align-items: center;
-        height: 34px;
-        width: 390px;
+        height: 40px;
+        border-radius: 60px;
+        //width: 390px;
+        width: 50%;
         & > div{
             margin-left: 8px;
             flex: 1;
