--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -342,23 +342,30 @@ body{
     }
 }
 #simple-popover{
-    & .DescPromo{
-        width: 393px;
-        padding-top: 15px;
-        & span{
-            @include fons(0.8rem, $Ubuntu);
+    & .SpacePromoRoot{
+        display: flex;
+        flex-direction: row;
+        & .DescPromo{
+            width: 50%;
+            padding-left: 20px;
+            & span{
+                @include fonsNew(1rem, $Roboto);
+                font-weight: 300;
+            }
         }
     }
+    
     & .InCart{
-        width: 393px; 
-        padding-top: 15px; 
-        display: flex;
-        justify-content: flex-end;
-        & span{
-            @include fons(0.875rem, $Ubuntu);
-        }
-        & button{
-            width: 100%;
+        width: 100%; 
+        & > a > div.MuiButtonGroup-root.MuiButtonGroup-contained{
+            background-color: #cf9f37;
+            border-radius: 60px;
+            & > button{
+                width: 100%;
+                & > span{
+                    @include fonsNew(1rem, $Roboto);
+                }
+            }
         }
     }
     & .TableMini{
