--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -342,6 +342,13 @@ body{
     }
 }
 #simple-popover{
+    & > div.MuiPaper-root.MuiPopover-paper.MuiPaper-elevation8.MuiPaper-rounded > div{
+        width: 600px;
+        padding-bottom: 40px;
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
     & .SpacePromoRoot{
         display: flex;
         flex-direction: row;
@@ -388,7 +395,17 @@ body{
             height: 500px;
             display: table-caption;
             width: 100%;
-            //border-bottom: 1px solid #e5e5e5;
+            
+            & tr{
+                border-bottom: 1px solid rgba(27, 27, 31, 0.1); 
+                padding-bottom: 5px;
+                padding-top: 5px;
+                display: block;
+                & img{
+                    height: 60px;
+                    width: auto;
+                }
+            }
         }
         & tfoot{
             height: 40px;
