--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -347,7 +347,7 @@ body{
         padding-bottom: 40px;
         padding-top: 20px;
         padding-left: 20px;
-        padding-right: 20px;
+        padding-right: 30px;
     }
     & .SpacePromoRoot{
         display: flex;
@@ -392,18 +392,18 @@ body{
         & tbody{
             overflow-y: scroll;
             overflow-x: hidden;
-            height: 500px;
+            height: 460px;
             display: table-caption;
             width: 100%;
-            
+            padding-right: 20px;
             & tr{
                 border-bottom: 1px solid rgba(27, 27, 31, 0.1); 
                 padding-bottom: 5px;
                 padding-top: 5px;
                 display: block;
                 & img{
-                    height: 60px;
-                    width: auto;
+                    height: auto;
+                    width: 100%;
                 }
             }
         }
@@ -453,8 +453,8 @@ body{
         }
         & .CellName{
             width: 32.8%;
-            margin-right: 10px;
-            margin-left: 10px;
+            padding-right: 10px;
+            padding-left: 10px;
         }
         & .CellButton{
             width: 25.9%;
