--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -356,8 +356,9 @@ body{
             width: 50%;
             padding-left: 20px;
             & span{
-                @include fonsNew(1rem, $Roboto);
+                @include fonsNew(0.95rem, $Roboto);
                 font-weight: 300;
+                line-height: 1;
             }
         }
     }
@@ -431,7 +432,7 @@ body{
         & .TableMiniPrice{
             text-align: center;
             @include fonsNew(1.08rem, $Roboto);
-            font-weight: 400;
+            font-weight: 500;
             display: flex;
             justify-content: flex-end;
             align-items: center;
@@ -460,14 +461,15 @@ body{
         border: 1px solid rgba(27, 27, 31, 0.1);
         width: 50%;
         & > div:first-child{
-            width: 100%;
+            width: calc(100% - 20px);
         }
         & input{
-            @include fonsNew(0.825rem, $Roboto);
-            font-weight: 300;
+            @include fonsNew(0.95rem, $Roboto);
+            font-weight: 400;
+            color: rgba(27,27,31,0.5);
         }
         & .promoIndicator{
-            width: 22px;
+            width: 20px;
             height: 20px;
             border-radius: 60px;
             margin: 0;
