--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -359,6 +359,7 @@ body{
                 @include fonsNew(0.95rem, $Roboto);
                 font-weight: 300;
                 line-height: 1;
+                color: #dd1932;
             }
         }
     }
@@ -406,6 +407,20 @@ body{
                     height: auto;
                     width: 100%;
                 }
+            }
+            &::-webkit-scrollbar-track{
+                -webkit-box-shadow: inset 0 0 6px #d0d0d0;
+                border-radius: 10px;
+                background-color: #fff;
+            }
+            &::-webkit-scrollbar{
+                width: 7px;
+                background-color: #fff;
+            }
+            &::-webkit-scrollbar-thumb{
+                border-radius: 10px;
+                -webkit-box-shadow: inset 0 0 6px #d0d0d0;
+                background-color: #d0d0d0;
             }
         }
         & tfoot{
