--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -376,6 +376,7 @@ body{
                 & > span{
                     @include fonsNew(1rem, $Roboto);
                     font-weight: 400;
+                    text-transform: initial;
                 }
             }
             & > button:hover{
@@ -407,20 +408,6 @@ body{
                     height: auto;
                     width: 100%;
                 }
-            }
-            &::-webkit-scrollbar-track{
-                -webkit-box-shadow: inset 0 0 6px #d0d0d0;
-                border-radius: 10px;
-                background-color: #fff;
-            }
-            &::-webkit-scrollbar{
-                width: 7px;
-                background-color: #fff;
-            }
-            &::-webkit-scrollbar-thumb{
-                border-radius: 10px;
-                -webkit-box-shadow: inset 0 0 6px #d0d0d0;
-                background-color: #d0d0d0;
             }
         }
         & tfoot{
@@ -468,7 +455,7 @@ body{
         }
     }
     & .SpacePromo{
-        padding: 0px 15px;
+        padding: 0px 10px 0px 20px;
         display: flex;
         align-items: center;
         height: 38px;
