--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -282,6 +282,50 @@ body{
         padding-bottom: 1px;
     }
 }
+.ActionsCartButton{
+    width: 100%;
+    & > div{
+        width: 100%;
+        height: 56px; 
+        border-radius: 40px;
+        border: 2px solid #F9BC23;
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        & > .minus{
+            width: 30px; 
+            height: 30px;
+            padding: 0; 
+            border-radius: 40px;
+            margin-left: 13px;
+            border: 1px solid #F9BC23;
+            background-color: #F9BC23;
+            @include fonsNew(1.5rem, $Roboto);
+            font-weight: 400;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        & > .plus{
+            width: 40px;
+            height: 40px;
+            padding: 0; 
+            border-radius: 40px; 
+            margin-right: 10px; 
+            border: 1px solid #F9BC23;
+            background-color: #F9BC23; 
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 400;
+            display: flex; 
+            justify-content: center;
+            align-content: center;
+        }
+        & > div > span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 700;
+        }
+    }
+}
 .MiniActionsCartButton{
     width: 100%;
     & > div{
