--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -291,8 +291,11 @@ body{
         border: 2px solid #F9BC23;
         & span{
             @include fonsNew(1.25rem, $Roboto);
-            font-weight: 700;
+            font-weight: 500;
             text-transform: initial;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         &:hover{
             background-color: #cf9f37;
@@ -373,9 +376,14 @@ body{
                 border: 1px solid #cf9f37;
             }
         }
-        & > div > span{
-            @include fonsNew(1.25rem, $Roboto);
-            font-weight: 700;
+        & > div{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            & > span{
+                @include fonsNew(1.25rem, $Roboto);
+                font-weight: 500;
+            }
         }
     }
 }
