--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -55,6 +55,7 @@ $colorText: #525252;
 ::-webkit-scrollbar{
 	width: 7px;
 	background-color: #fff;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb{
