--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -283,6 +283,36 @@ body{
         padding-bottom: 1px;
     }
 }
+.MobileActionsCartButtonStart{
+    & > button{
+        width: 80px;
+        height: 30px;
+        padding: 0; 
+        background-color: #fff;
+        border: 1px solid #F9BC23;
+        border-radius: 30px;
+        & span{
+            @include fonsNew(0.875rem, $Roboto);
+            font-weight: 500;
+            text-transform: initial;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:hover{
+            background-color: #cf9f37;
+            border: 1px solid #cf9f37;
+        }
+        &:target{
+            background-color: #cf9f37;
+            border: 1px solid #cf9f37;
+        }
+        &:active{
+            background-color: #cf9f37;
+            border: 1px solid #cf9f37;
+        }
+    }
+}
 .ActionsCartButtonStart{
     width: 100%;
     & > .ModalItemButtonCart{
