--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -340,6 +340,20 @@ body{
             @include fonsNew(0.875rem, $Roboto);
             font-weight: 500;
         }
+        & > span.minus, span.plus{
+            &:hover{
+                background-color: transparent;
+                border: transparent;
+            }
+            &:target{
+                background-color: transparent;
+                border: transparent;
+            }
+            &:active{
+                background-color: transparent;
+                border: transparent;
+            }
+        }
         & > .plus{
             width: 28px;
             height: 28px;
