--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -321,12 +321,19 @@ $colorMain: #CC0033;
 }
 
 .blurBacground{
+    background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
 
     -moz-backdrop-filter: blur(15px);
     -o-backdrop-filter: blur(15px);
     -ms-backdrop-filter: blur(15px);
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+    .blurBacground{
+        background-color: rgba(0, 0, 0, 0.9);
+    }
 }
 
 .MuiTooltip-popper{
