--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -344,12 +344,21 @@ $colorMain: #CC0033;
     & > div{
         max-width: 400px!important;
         width: 93%;
-        background-color: rgba(0,0,0, 0.65) !important;
+        background-color: rgba(0,0,0, 0.65);
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
         -moz-backdrop-filter: blur(15px);
         -o-backdrop-filter: blur(15px);
         -ms-backdrop-filter: blur(15px);
+        @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+            background-color: rgba(0,0,0, 0.9);
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
+            -moz-backdrop-filter: blur(15px);
+            -o-backdrop-filter: blur(15px);
+            -ms-backdrop-filter: blur(15px);
+        }
+        
         color: #fff!important;
         border-radius: 30px;
         padding: 20px;
