--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -336,7 +336,7 @@ $colorMain: #CC0033;
     }
 }
 
-.MuiTooltip-tooltip{
+.MuiTooltip-popper{
     //left: -100px!important;
     pointer-events: auto!important;
     transform: initial!important;
